syntax =  "proto3";

package com.name_template.api.grpc;

option java_multiple_files = true;
option java_package = "net.devh.boot.grpc.examples.lib";

service NameTemplate {
  rpc SayHello (HelloRequest) returns (HelloResponse) {
  }


  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}


message HealthCheckRequest {}

message HealthCheckResponse {
  enum Status {
    EMPTY = 0;
    HEALTHY = 1;
    UNHEALTHY = 2;
    UNKNOWN = 3;
  }

  Status status = 1;
}